--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>硅谷外卖</title>
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_518606_6676bmcalnrhehfr.css"></link>
-    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./static/css/reset.css"></link>
   </head>
   <body>
     <div id="app"></div>
